# car_parking_rest

./: .Dockerignore  .gitignore  .isort.cfg  .pre-commit-config.yaml  Dockerfile  commands.txt  docker-compose.yml  environment.yml  manage.py  pyproject.toml  requirements.txt
car_parking_rest/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
cars/: admin.py  models.py  resource.py  translation.py  utils.py
cars/api/: custom_page.py  e_views.py  serializers.py  urls.py  views.py
cars/factories/: all_factory.py
cars/tests/: conftest.py  test_faker_models.py  test_faker_user.py  test_models.py  test_py_models.py  test_urls.py  test_views.py
docs/source/: conf.py  index.rst
locale/en/LC_MESSAGES/: django.po
locale/ne/LC_MESSAGES/: django.mo  django.po
users/: admin.py  apps.py  auth_backend.py  custom_permissions.py  manager.py  models.py  signals.py  tasks.py  translation.py
users/api/: serializer.py  urls.py  views.py
